# digital-currency-consortium

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  coin_movement_schema.json  deployment.yaml  docker-builder.sh  service.datadog.yaml  settings.gradle.kts
.github/: CODEOWNERS
.github/workflows/: azure.yml  deploy-test.yml  release-build-publish.yml  sc-build-and-test.yml  sc-security-audit.yml  workflow.yml
azure/: ReadMe.md
buildSrc/src/main/kotlin/: CustomTestOutput.kt  Dependencies.kt  Version.kt
database/: build.gradle.kts
database/src/main/resources/db-init/: db-init.sql
database/src/main/resources/db/migration/: V10_0__add_coin_transfer.sql  V11_0__add_burn_v2.sql  V1_0__init.sql  V2_0__add_coin_movement.sql  V3_0__add_balance_report.sql  V4_0__add_status_to_registration.sql  V5_0__change_coin_movement_pk.sql  V6_0__add_marker_tfr_constraint.sql  V6_0__add_migration_notification.sql  V7_0__add_deleted_registration.sql  V8_0__add_tx_request_view.sql  V9_0__remove_mint_bank_not_null.sql
docker/: Dockerfile-database  Dockerfile-report  Dockerfile-service  docker-compose-db.yml  docker-compose.yml  docker-entrypoint.sh
docs/tutorial/: FullFlow.md
extra/: Omnibus.js
report/: build.gradle.kts
report/src/main/kotlin/io/provenance/digitalcurrency/report/: Application.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/api/: Pagination.kt  SettlementReportResponse.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/config/: AppConfig.kt  DataConfig.kt  FlywayConfig.kt  LoggerConfig.kt  Properties.kt  SwaggerConfig.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/domain/: CoinMovement.kt  Database.kt  EventStream.kt  SettlementNetEntry.kt  SettlementReport.kt  SettlementWireEntry.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/extension/: CsvExtension.kt  DomainExtension.kt  PaginationExtension.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/service/: SettlementReportService.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/stream/: EventStreamConsumer.kt  Events.kt
report/src/main/kotlin/io/provenance/digitalcurrency/report/web/: Routes.kt  SettlementController.kt
report/src/main/resources/: application-container.properties  application-development.properties  application.properties
report/src/main/resources/db/migration/: V001__intial_schema.sql
report/src/test/kotlin/io/provenance/digitalcurrency/report/: DatabaseTest.kt  TestContainer.kt  TestUtil.kt
report/src/test/kotlin/io/provenance/digitalcurrency/report/service/: SettlementReportServiceTest.kt
report/src/test/resources/: application.properties
scripts/swagger-generation/: dcc-spec.json  generator.mjs  package-lock.json  package.json
service/: build.gradle.kts
service/docker/: Dockerfile  configure
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/: Application.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/annotation/: NotTest.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/api/: AlertRequest.kt  BalanceRequest.kt  BankSettlementRequest.kt  BurnCoinRequest.kt  CoinMovementRequest.kt  Consortium.kt  ContractMessage.kt  DepositFiat.kt  DepositFiatRequest.kt  GrantRequest.kt  JoinConsortium.kt  JoinConsortiumRequest.kt  MemberResponse.kt  MintCoin.kt  MintCoinRequest.kt  RedeemBurnCoinRequest.kt  RegisterAccount.kt  RegisterAddress.kt  RegisterAddressRequest.kt  TransferRequest.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/bankclient/: BankClient.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/config/: AppConfig.kt  DataConfig.kt  ExposedDatabaseConnector.kt  FlywayConfig.kt  GlobalAdviceConfig.kt  LoggerConfig.kt  Properties.kt  SwaggerConfig.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/domain/: AddressDeregistration.kt  AddressRegistration.kt  BalanceEntry.kt  BalanceReport.kt  BaseAddressTable.kt  BaseCoinRequestTable.kt  BaseRequestTable.kt  CoinBurn.kt  CoinMint.kt  CoinMovement.kt  CoinMovementBookmark.kt  CoinRedeemBurn.kt  CoinRedemption.kt  CoinTransfer.kt  Database.kt  Enums.kt  EventStream.kt  MarkerTransfer.kt  Migration.kt  PendingTransfer.kt  TxRequestView.kt  TxStatus.kt  Utils.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/extension/: DomainExtension.kt  DurationExtension.kt  PbcExtension.kt  ProtoExtension.kt  RetryExtension.kt  ThreadExtension.kt
service/src/main/kotlin/io/provenance/digitalcurrency/consortium/frameworks/: AddressDetagQueue.kt  AddressTagQueue.kt  BalanceReportMonitor.kt  (+16 more)
service/src/main/kotlin/io/provenance/usdf/consortium/: Application.kt
service/src/main/resources/: application-container.properties  application-development.properties  application.properties  logback.xml
service/src/test/kotlin/io/provenance/digitalcurrency/consortium/: BaseIntegrationTest.kt  DatabaseTest.kt  TestContainer.kt  TestExtension.kt  TestUtil.kt
service/src/test/resources/: application.properties
service/src/test/resources/proto-examples/: redeem-tx-multi-coin.json  redeem-tx-no-coin.json  redeem-tx.json
smart-contract/: Cargo.toml  Makefile  README.md
smart-contract-sale/: Cargo.toml  Makefile  README.md
smart-contract-sale/artifacts/: checksums.txt  dcc_sale.wasm
smart-contract-sale/examples/: schema.rs
smart-contract-sale/schema/: execute_msg.json  init_msg.json  query_msg.json  sale.json  state.json
smart-contract-sale/src/: contract.rs  error.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  state.rs
smart-contract/artifacts/: checksums.txt  dcc.wasm
smart-contract/examples/: schema.rs
smart-contract/schema/: balances.json  execute_msg.json  init_msg.json  join_proposal.json  join_proposal_v2.json  join_proposals.json  member.json  member_v2.json  members.json  query_msg.json  state.json  state_v2.json
smart-contract/src/: contract.rs  error.rs  join_proposal.rs  lib.rs  member.rs  msg.rs  state.rs  version_info.rs
smart-contract/testdata/: bank.json  dcc.json
(+142 files in other folders)
