[package]
name = "dcc-sale"
version = "0.1.0"
authors = ["Lee Duan <lduan@figure.com>"]
edition = "2018"

exclude = [
  "dcc_bilateral.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1.9", features = ["iterator"] }
cosmwasm-storage = { version = "1.2.3", features = ["iterator"] }
cw2 = "0.16"
provwasm-std = { version = "1.1.2" }
schemars = "0.8.11"
semver = "1.0.16"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }
uuid = { version= "0.8.2" }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.9" }
provwasm-mocks = { version = "1.1.2" }
