[package]
name = "dcc-sale"
version = "0.1.0"
authors = ["Lee Duan <lduan@figure.com>"]
edition = "2018"

exclude = [
  "dcc_bilateral.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.2.3", features = ["iterator"] }
cosmwasm-storage = { version = "1.2.3", features = ["iterator"] }
cw2 = "1.0.1"
provwasm-std = { version = "1.1.2" }
schemars = "0.8.12"
semver = "1.0.17"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.40" }
uuid = { version= "1.3.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.3" }
provwasm-mocks = { version = "1.1.2" }
