[package]
name = "dcc"
version = "0.6.0"
authors = ["David Pederson <dpederson@figure.com>", "Lee Duan <lduan@figure.com>"]
edition = "2018"

exclude = [
  "dcc.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
provwasm-std = { version = "1.1.2" }
cosmwasm-std = { version = "1.1.9", features = ["iterator"] }
cosmwasm-storage = { version = "1.1.9", features = ["iterator"] }
cw2 = "0.16"
schemars = "0.8.11"
semver = "1.0.14"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }

[dev-dependencies]
provwasm-mocks = { version = "1.1.2" }
cosmwasm-schema = { version = "1.1.9" }
