[package]
name = "dcc"
version = "0.6.0"
authors = ["David Pederson <dpederson@figure.com>", "Lee Duan <lduan@figure.com>"]
edition = "2018"

exclude = [
  "dcc.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.2.6", features = ["iterator"] }
cosmwasm-storage = { version = "1.2.6", features = ["iterator"] }
cw2 = "1.0.1"
provwasm-std = { version = "2.0.0-rc1" }
schemars = "0.8.12"
semver = "1.0.17"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.40" }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.6" }
provwasm-mocks = { version = "2.0.0-rc1" }
